feat(backend): adiciona audit log
