# backend/src/main/java/br/com/salao/domain/entity/AuditAction.java
@@ -1,0 +1,10 @@
+package br.com.salao.domain.entity;
+
+public enum AuditAction {
+    LOGIN,
+    SERVICE_CREATED,
+    SERVICE_UPDATED,
+    SERVICE_DEACTIVATED,
+    APPOINTMENT_CREATED,
+    APPOINTMENT_CANCELLED
+}
